[package]
name = "qoeurcp_ast"
version = "0.0.0"
authors = ["monsieurbadia <iam@monsieurbadia.com>"]
edition = "2018"

description = """
the abstract syntax tree for the qoeur compiler programming
"""

[lib]
name = "qoeurcp_ast"
path = "src/lib.rs"
doctest = false

[dependencies]
qoeurcp_span = { path = "../qoeurcp_span" }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
tendril = "0.4.2"
